fixed layout issue - download progress bar must be inline with other navbar elements.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,6 +23,16 @@ body {
 	padding-bottom: 0;
 }
 
+.navbar-middle {
+	flex-shrink: 1;
+	min-width: 0;
+}
+
+.navbar-right {
+	max-width: fit-content;
+	margin-left: 0.5rem;
+}
+
 .navbar-brand .nav-link {
 	color: var(--invest-green);
 	font-weight: 600;
@@ -83,6 +93,7 @@ body {
 }
 
 .progress {
+	display: inline-flex;
 	height: 2rem;
 	font-size: 1rem;
 	background-color: #aeb1b3;
